--- a/css/style.css
+++ b/css/style.css
@@ -351,11 +351,13 @@ body {
 
 
 footer {
-  margin-top: auto;
   background-color: rgb(88, 86, 86);
   opacity: 0.85;
   width: 100%;
   height: 10%;
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
 }
 
 footer section {
